--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
 }
 
@@ -13,4 +13,22 @@ body {
 
 .task-card:hover {
   cursor: grab;
+}
+.btn-outline-danger {
+  color: #ffffff;
+  border-color: #dc3545;
+}
+
+.btn-outline-danger:hover {
+  color: #ffffff;
+  background-color: #dc3545;
+  border-color: #dc3545;
+}
+
+.bg-danger {
+  color: #ffffff;
+}
+
+.bg-warning {
+  color: #000000;
 }
